# oh-my-pi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  tsconfig.base.json  tsconfig.tools.json
python/fugu/: .gitignore  README.md  _bench2_iterations.py  mcp_server.py  package.json  pyproject.toml
python/fugu/configs/: FUSION_QA.md  eval_suites.yaml  fugu_pool.yaml  fusion_qa.yaml  models.yaml  omp_provider.yml  permissions.yaml  router.yaml  rubric.yaml
python/fugu/distill/: README.md  _poll.py  _run_full.sh  build_data.py  colab_finetune.ipynb  colab_job.py  make_colab_notebook.py  prompt_template.py  train_qlora.py
python/fugu/docker/: docker-compose.yml  evaluator.Dockerfile  runner.Dockerfile
python/fugu/docs/: dynamic-workflow-execution-map.md  fold-proposal-deepen-meta-optimizer.md  model-options-reference.md  p3b-optimizer-realism-plan.md  p4-proposer-changed-paths-fidelity-plan.md  proposer-sandbox-verification.md
python/fugu/harness/: __init__.py  rqgm_evolve.py  rqgm_provider.py
python/fugu/knowledge/: agentic-headroom.md  agentic-roadmap.md  benchmarks.md  build_okf.py  distilled-verifier.md  fusion-formal-law.md  fusion-literature-review.md  fusion-pipeline.md  fusion-verdict.md  index.md  lane-strength-sweep.md  log.md  swap-and-aggregate-verifier.md
python/fugu/prompts/: audit-candidate.md  candidate_agent.md  compare-patches.md  critic.md  ensemble-verifier.md  fugu_coordinator.md  meta_proposer.md  meta_verifier_proposer.md  repair.md  rqgm_reviewer.md  synthesizer.md
python/fugu/schemas/: rubric_result.schema.json  (+5 more)
(+326 files in other folders)
